# url-shortener

./: .dockerignore  Dockerfile  README.md  app.py  docker-compose.yml  nginx.conf  package.json  pnpm-lock.yaml  pyproject.toml  release-please-config.json  requirements.txt
.github/workflows/: release.yml  test.yml
ansible/: ansible.cfg  default.playbook.yml  deploy.yml  inventory.yml  redeploy.yml  restart.yml  setup.yml
ansible/config/: exclude-patterns.txt  inventory.yml
ansible/roles/push-files/tasks/: main.yml
ansible/roles/sync-exclude-patterns/tasks/: main.yml  sync-exclude-patterns.sh
db/migrations/: 001_initial.py  002_add_metadata_column.py
docker/: db_migrate.dockerfile  url_shortener.dockerfile
dockerfiles/: db_migrate.dockerfile
nginx/conf.d/: nginx.conf
nginx/sites-enabled/: default.conf
src/app/: __init__.py  _app.py  _bootstrap.py  config.py  container.py
src/common/error/: __init__.py  _throw.py
src/config/: __init__.py  _database.py  _settings.py
src/db/: __init__.py  _base.py  _setup.py
src/db/model/: __init__.py  _url.py
src/dtos/: __init__.py  _create_url.py
src/models/: __init__.py  _url.py
src/repositories/url/: __init__.py  _mock_repository.py  _repository.py  _sqlalchemy_repository.py
src/routers/: __init__.py  _url_router.py
src/services/: _url_service.py
src/services/url/: __init__.py  _url_service.py
src/services/url/tests/: test_url_service.py
src/url_shortener/: __init__.py  _dto.py  _exception.py  _router.py  _service.py
supabase/: config.toml
supabase/migrations/: 20240212154558_create_url_table.sql
terraform/: .gitignore  .terraform.lock.hcl  main.tf  provider.tf  setup.sh  terraform.tfvars.template  variables.tf
tests/: test_url_shortener.py
