[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "url-shortener"
version = "0.0.0"
description = ""
authors = []
readme = ["README.md"]
exclude = ["**/tests", "**/package.json", "**/project.json"]
[[tool.poetry.packages]]
include = "src"

[tool.black]
line-length = 88
target-version = ["py311"]
include = "\\.pyi?$"
extend-exclude = "/(\n  # The following are specific to Black, you probably don't want those.\n  tests/data\n  | profiling\n)/\n"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.109.2"
pydantic = "^2.6.1"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
sqlalchemy = "^2.0.26"
httpx = "^0.26.0"
jinja2 = "^3.1.3"
pydantic-settings = "^2.1.0"
validators = "^0.22.0"
shortuuid = "^1.0.11"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.9.1"
pre-commit = "^3.4.0"
commitizen = "^3.10.0"
poethepoet = "^0.24.4"

[tool.poetry.group.test.dependencies]
faker = "^20.1.0"
pytest = "^7.4.3"
pytest-order = "^1.2.0"
pytest-httpx = "^0.29.0"
