[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "url-shortener"
version = "0.0.0"
description = ""
authors = []
readme = ["README.md"]
exclude = ["**/tests", "**/package.json", "**/project.json"]
[[tool.poetry.packages]]
include = "src"

[tool.black]
line-length = 88
target-version = ["py311"]
include = "\\.pyi?$"
extend-exclude = "/(\n  # The following are specific to Black, you probably don't want those.\n  tests/data\n  | profiling\n)/\n"

[tool.poe.tasks]
test = "python -m pytest"
start = "python -m app"
export-requirements = "poetry export -f requirements.txt --output requirements.txt --without-hashes --all-extras --with dev,test"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.109.2"
pydantic = "^2.6.1"
uvicorn = { extras = ["standard"], version = "^0.27.1" }
httpx = "^0.26.0"
validators = "^0.22.0"
shortuuid = "^1.0.11"
peewee = "^3.17.1"
dependency-injector = "^4.41.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.9.1"
pre-commit = "^3.4.0"
commitizen = "^3.10.0"
poethepoet = "^0.24.4"

[tool.poetry.group.test.dependencies]
faker = "^20.1.0"
pytest = "^7.4.3"
pytest-order = "^1.2.0"
pytest-httpx = "^0.29.0"
